--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="assets/button-304224_1280.jpg" alt="logo icon">
             <ul>
                 <li>Home</li>
-                <li>About</li>
+                <li><a href="about.html"> About</a></li>
                 <li>Contact</li>
             </ul>
         </nav>
