--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
         <nav>
             <img src="assets/button-304224_1280.jpg" alt="logo icon">
             <ul>
-                <li>Home</li>
+                <li><a href="index.html"> Home</a></li>
                 <li><a href="about.html"> About</a></li>
-                <li>Contact</li>
+                <li><a href="contact.html"> Contact</a></li>
             </ul>
         </nav>
     </header>
-    Lorem ipsum dolor
+    		<section class="hero">
+			<h1>Mon titre</h1>
+			<p>
+				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste explicabo
+				excepturi aliquam quis veritatis! Ipsum perferendis, eos commodi quae
+				illo ullam debitis quam, in rerum assumenda omnis possimus aliquam
+				minima.
+			</p>
+			<button>Click me </button>
+		</section>
+    <h1>Portfolio</h1>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        Nesciunt modi magni nobis perspiciatis incidunt?
+        Nobis ipsam voluptas facere corporis incidunt dignissimos expedita vel vitae itaque?
+        Voluptates cum excepturi corrupti eaque!
+    </p>
+    <script src="script.js"></script>
 </body>
 </html>
+
